--- a/api-mapping.json
+++ b/api-mapping.json
@@ -19,7 +19,7 @@
                 "requestHeadersExample": null
             },
             {
-                "status": "NEW",
+                "status": "",
                 "title": "Login with Google",
                 "description": "",
                 "path": "/auth/login-with-google",
@@ -45,11 +45,13 @@
                 "responseBodyExample": {
                     "id": "User UUID",
                     "username": "abcxyz",
+                    "role": 0,
                     "detail": {
                         "lname": "string",
                         "fname": "string",
                         "age": 0,
-                        "email": "string"
+                        "email": "string",
+                        "avt": "string"
                     }
                 },
                 "requestHeadersExample": {
@@ -75,23 +77,26 @@
                         "lname": "string",
                         "fname": "string",
                         "age": 0,
-                        "email": "string"
+                        "email": "string",
+                        "avt": "string"
                     }
                 },
                 "responseBodyExample": {
                     "id": "User UUID",
                     "username": "abcxyz",
+                    "role": 0,
                     "detail": {
                         "lname": "string",
                         "fname": "string",
                         "age": 0,
-                        "email": "string"
+                        "email": "string",
+                        "avt": "string"
                     }
                 },
                 "requestHeadersExample": null
             },
             {
-                "status": "NEW",
+                "status": "MODIFIED",
                 "title": "Update Account Detail",
                 "description": "Change the detail of the resource owner",
                 "path": "/accounts/detail",
@@ -101,16 +106,19 @@
                     "lname": "string",
                     "fname": "string",
                     "age": 0,
-                    "email": "string"
+                    "email": "string",
+                    "avt": "string"
                 },
                 "responseBodyExample": {
                     "id": "User UUID",
                     "username": "abcxyz",
+                    "role": 0,
                     "detail": {
                         "lname": "string",
                         "fname": "string",
                         "age": 0,
-                        "email": "string"
+                        "email": "string",
+                        "avt": "string"
                     }
                 },
                 "requestHeadersExample": null,
@@ -120,7 +128,7 @@
                 ]
             },
             {
-                "status": "NEW",
+                "status": "MODIFIED",
                 "title": "Get all account",
                 "description": "",
                 "path": "/accounts/",
@@ -134,11 +142,13 @@
                         {
                             "id": "User UUID",
                             "username": "abcxyz",
+                            "role": 0,
                             "detail": {
                                 "lname": "string",
                                 "fname": "string",
                                 "age": 0,
-                                "email": "string"
+                                "email": "string",
+                                "avt": "string"
                             }
                         }
                     ],
@@ -153,6 +163,124 @@
                 },
                 "allowedRoles": [
                     "admin"
+                ]
+            }
+        ]
+    },
+    {
+        "title": "local-files",
+        "endpoints": [
+            {
+                "status": "NEW",
+                "title": "Upload File",
+                "description": "",
+                "path": "/local-files/",
+                "method": "POST",
+                "contentType": "multipart/form-data",
+                "requestBodyExample": {
+                    "file": "file"
+                },
+                "responseBodyExample": {
+                    "url": "http://localhost:3000/local-files/c9085e1d-7ee8-4ef7-a6e1-e97ab97e0061"
+                },
+                "requestHeadersExample": null
+            },
+            {
+                "status": "NEW",
+                "title": "Retrive File",
+                "description": "",
+                "path": "/local-files/{id}",
+                "method": "GET",
+                "contentType": "",
+                "requestBodyExample": null,
+                "responseBodyExample": "The file that user uploaded",
+                "requestHeadersExample": null
+            }
+        ]
+    },
+    {
+        "title": "posts",
+        "endpoints": [
+            {
+                "status": "NEW",
+                "title": "Create post",
+                "description": "",
+                "path": "/posts/",
+                "method": "POST",
+                "contentType": "application/json",
+                "requestBodyExample": {
+                    "content": "string"
+                },
+                "responseBodyExample": {
+                    "message": "Create post successfully!"
+                },
+                "requestHeadersExample": null,
+                "allowedRoles": [
+                    "admin",
+                    "user"
+                ]
+            },
+            {
+                "status": "NEW",
+                "title": "Update post",
+                "description": "",
+                "path": "/posts/{id}",
+                "method": "PUT",
+                "contentType": "application/json",
+                "requestBodyExample": {
+                    "content": "string"
+                },
+                "responseBodyExample": {
+                    "message": "Update post successfully!"
+                },
+                "requestHeadersExample": null,
+                "allowedRoles": [
+                    "admin",
+                    "user"
+                ]
+            },
+            {
+                "status": "NEW",
+                "title": "Get all posts",
+                "description": "",
+                "path": "/posts/",
+                "method": "GET",
+                "contentType": "",
+                "requestBodyExample": null,
+                "responseBodyExample": {
+                    "page": 1,
+                    "take": 10,
+                    "data": [
+                        {
+                            "id": 1,
+                            "content": "string",
+                            "createdAt": "2024-03-03T19:21:32.100Z",
+                            "modifiedAt": "2024-03-03T19:21:32.100Z",
+                            "author": {
+                                "id": "459f7b82-f8a7-4500-9ff4-80df0ee3aa90",
+                                "username": "longlt201203",
+                                "role": 0,
+                                "detail": {
+                                    "lname": "Le",
+                                    "fname": "Thanh Long",
+                                    "age": 20,
+                                    "email": "longlt201203@gmail.com",
+                                    "avt": "http://localhost:3000/local-files/7de8f644-cd8a-4d1a-b730-8307698df2e8"
+                                }
+                            }
+                        }
+                    ],
+                    "totalRecord": 1,
+                    "totalPage": 1
+                },
+                "requestHeadersExample": null,
+                "requestQueryExample": {
+                    "page": 1,
+                    "take": 10
+                },
+                "allowedRoles": [
+                    "admin",
+                    "user"
                 ]
             }
         ]
